RESOLVED FIXED189549
getComputedStyle doesn't absolutize percentages in sticky positioning
https://bugs.webkit.org/show_bug.cgi?id=189549
Summary getComputedStyle doesn't absolutize percentages in sticky positioning
Oriol Brufau
Reported 2018-09-12 08:19:32 PDT
Run this code for some element that generates boxes: ```js element.style.position = "-webkit-sticky"; element.style.top = "10%"; getComputedStyle(element).top; ``` Actual value: "10%" Expected: the percentage should be absolutized into a length
Attachments
Patch (72.10 KB, patch)
2019-05-02 23:25 PDT, Joonghun Park
no flags
Archive of layout-test-results from ews215 for win-future (13.67 MB, application/zip)
2019-05-03 01:04 PDT, EWS Watchlist
no flags
Emilio Cobos Álvarez (:emilio)
Comment 1 2018-09-16 11:17:01 PDT
Beware of other browsers not being interoperable here, see: https://github.com/w3c/csswg-drafts/issues/3115
Joonghun Park
Comment 2 2019-04-30 03:49:02 PDT
Joonghun Park
Comment 3 2019-05-02 23:25:47 PDT
Joonghun Park
Comment 4 2019-05-03 00:32:20 PDT
Hi, Could this change be reviewed?
EWS Watchlist
Comment 5 2019-05-03 01:04:06 PDT
Comment on attachment 368906 [details] Patch Attachment 368906 [details] did not pass win-ews (win): Output: https://webkit-queues.webkit.org/results/12080674 New failing tests: legacy-animation-engine/fast/layers/no-clipping-overflow-hidden-hardware-acceleration.html
EWS Watchlist
Comment 6 2019-05-03 01:04:09 PDT
Created attachment 368912 [details] Archive of layout-test-results from ews215 for win-future The attached test failures were seen while running run-webkit-tests on the win-ews. Bot: ews215 Port: win-future Platform: CYGWIN_NT-10.0-17763-3.0.5-338.x86_64-x86_64-64bit
Joonghun Park
Comment 7 2019-05-03 01:20:06 PDT
It seems that win-ews is unstable currently seeing https://webkit-queues.webkit.org/queue-status/win-ews. So the win-ews's failure result could be ignored I guess.
Antti Koivisto
Comment 8 2019-05-03 04:37:47 PDT
Comment on attachment 368906 [details] Patch r=me
WebKit Commit Bot
Comment 9 2019-05-03 06:20:03 PDT
Comment on attachment 368906 [details] Patch Clearing flags on attachment: 368906 Committed r244906: <https://trac.webkit.org/changeset/244906>
WebKit Commit Bot
Comment 10 2019-05-03 06:20:05 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 11 2019-05-03 06:24:07 PDT
Note You need to log in before you can comment on or make changes to this bug.