Resolve the percentage values of inset properties against proper box. https://bugs.webkit.org/show_bug.cgi?id=189549

Patch by Joonghun Park <jh718.park@samsung.com> on 2019-05-03
Reviewed by Antti Koivisto.

Before this CL, sticky element's layout was executed relative to
a box's overflow container,
but the value returned by getComputedStyle was resolved against
its containing block.

So, the computed value and the actual value used in layout
was different before this change.

LayoutTests/imported/w3c:

* web-platform-tests/css/cssom/getComputedStyle-insets-sticky-container-for-abspos-expected.txt: Copied from LayoutTests/imported/w3c/web-platform-tests/css/cssom/getComputedStyle-insets-sticky-expected.txt.
* web-platform-tests/css/cssom/getComputedStyle-insets-sticky-container-for-abspos.html: Copied from LayoutTests/imported/w3c/web-platform-tests/css/cssom/getComputedStyle-insets-sticky.html.
* web-platform-tests/css/cssom/getComputedStyle-insets-sticky-expected.txt:
* web-platform-tests/css/cssom/getComputedStyle-insets-sticky.html:
* web-platform-tests/css/cssom/getComputedStyle-sticky-pos-percent-expected.txt: Added.
* web-platform-tests/css/cssom/getComputedStyle-sticky-pos-percent.html: Added.
* web-platform-tests/css/cssom/support/getComputedStyle-insets.js:
(runTestsWithWM):

Source/WebCore:

Tests: imported/w3c/web-platform-tests/css/cssom/getComputedStyle-insets-sticky-container-for-abspos.html
       imported/w3c/web-platform-tests/css/cssom/getComputedStyle-sticky-pos-percent.html

* css/CSSComputedStyleDeclaration.cpp:
(WebCore::positionOffsetValue):
* rendering/RenderBox.cpp:
(WebCore::RenderBox::enclosingScrollportBox const):
* rendering/RenderBox.h:

Canonical link: https://commits.webkit.org/211698@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@244906 268f45cc-cd09-0410-ab3c-d52691b4dbfc